// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurricUnitCard changes color when highlighed 1`] = `
<body>
  <div>
    <div
      class="sc-aXZVg sc-fTFjTM hSSbvD dDtfAW"
    >
      <a
        class="sc-a6022ff2-0 ejmuOd"
        data-testid="unit-info-link"
        href="/"
      >
        <div
          class="sc-aXZVg sc-gEvEer dktOiQ bktafW"
          data-testid="unit-card"
        >
          <div
            class="sc-aXZVg sc-gEvEer hkJkIR gWvaOf"
          >
            <div
              class="sc-eldPxv sc-ef43f00b-0 fqxCxQ ebOXeQ pa11y-ignore"
            >
              <span
                aria-hidden="true"
              >
                1
              </span>
            </div>
            <span
              class="sc-eqUAAy iuxBUE"
            >
              Something nice
            </span>
            <div
              class="sc-aXZVg ewgfix"
              data-testid="options-tag"
            >
              <span
                class="sc-eqUAAy bxjCXF"
                color="lavender"
              >
                2 unit options
              </span>
            </div>
          </div>
          <div
            class="sc-aXZVg sc-gEvEer gobIoP ioiTMB"
          >
            <div
              class="sc-aXZVg sc-gEvEer hkJkIR fUsBHa"
            >
              <div
                class="sc-aXZVg sc-dAbbOL gObPQU qwGmk"
              >
                Unit info
              </div>
              <span
                class="sc-aXZVg bQyjPj"
              >
                <img
                  alt=""
                  class="sc-iGgWBj lcrpYX"
                  data-nimg="fill"
                  decoding="async"
                  loading="lazy"
                  src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1707752509/icons/vk9xxxhnsltsickom6q9.svg"
                  style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                />
              </span>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</body>
`;

exports[`CurricUnitCard highlighted state 1`] = `
<body>
  <div>
    <div
      class="sc-aXZVg sc-fTFjTM hSSbvD dDtfAW"
    >
      <a
        class="sc-a6022ff2-0 QTKhP"
        data-testid="unit-info-link"
        href="/"
      >
        <div
          class="sc-aXZVg sc-gEvEer cxWdHM bktafW"
          data-testid="highlighted-unit-card"
        >
          <div
            class="sc-aXZVg sc-gEvEer hkJkIR gWvaOf"
          >
            <div
              class="sc-eldPxv sc-ef43f00b-0 fqxCxQ ebOXeQ pa11y-ignore"
            >
              <span
                aria-hidden="true"
              >
                1
              </span>
            </div>
            <span
              class="sc-eqUAAy iuxBUE"
            >
              Something nice
            </span>
            <div
              class="sc-aXZVg ewgfix"
              data-testid="options-tag"
            >
              <span
                class="sc-eqUAAy bxjCXF"
                color="lavender"
              >
                2 unit options
              </span>
            </div>
          </div>
          <div
            class="sc-aXZVg sc-gEvEer gobIoP ioiTMB"
          >
            <div
              class="sc-aXZVg sc-gEvEer hkJkIR fUsBHa"
            >
              <div
                class="sc-aXZVg sc-dAbbOL gObPQU qwGmk"
              >
                Unit info
              </div>
              <span
                class="sc-aXZVg bQyjPj"
              >
                <img
                  alt=""
                  class="sc-iGgWBj bOyFfb"
                  data-nimg="fill"
                  decoding="async"
                  loading="lazy"
                  src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1707752509/icons/vk9xxxhnsltsickom6q9.svg"
                  style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                />
              </span>
            </div>
          </div>
          <div
            style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
          >
             (highlighted)
          </div>
        </div>
      </a>
    </div>
  </div>
</body>
`;

exports[`CurricUnitCard index is correct 1`] = `
<body>
  <div>
    <div
      class="sc-aXZVg sc-fTFjTM hSSbvD dDtfAW"
    >
      <a
        class="sc-a6022ff2-0 ejmuOd"
        data-testid="unit-info-link"
        href="/"
      >
        <div
          class="sc-aXZVg sc-gEvEer dktOiQ bktafW"
          data-testid="unit-card"
        >
          <div
            class="sc-aXZVg sc-gEvEer hkJkIR gWvaOf"
          >
            <div
              class="sc-eldPxv sc-ef43f00b-0 fqxCxQ ebOXeQ pa11y-ignore"
            >
              <span
                aria-hidden="true"
              >
                1
              </span>
            </div>
            <span
              class="sc-eqUAAy iuxBUE"
            >
              Something nice
            </span>
            <div
              class="sc-aXZVg ewgfix"
              data-testid="options-tag"
            >
              <span
                class="sc-eqUAAy bxjCXF"
                color="lavender"
              >
                2 unit options
              </span>
            </div>
          </div>
          <div
            class="sc-aXZVg sc-gEvEer gobIoP ioiTMB"
          >
            <div
              class="sc-aXZVg sc-gEvEer hkJkIR fUsBHa"
            >
              <div
                class="sc-aXZVg sc-dAbbOL gObPQU qwGmk"
              >
                Unit info
              </div>
              <span
                class="sc-aXZVg bQyjPj"
              >
                <img
                  alt=""
                  class="sc-iGgWBj lcrpYX"
                  data-nimg="fill"
                  decoding="async"
                  loading="lazy"
                  src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1707752509/icons/vk9xxxhnsltsickom6q9.svg"
                  style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                />
              </span>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</body>
`;

exports[`CurricUnitCard render 1`] = `
<body>
  <div>
    <div
      class="sc-aXZVg sc-fTFjTM hSSbvD dDtfAW"
    >
      <a
        class="sc-a6022ff2-0 ejmuOd"
        data-testid="unit-info-link"
        href="/"
      >
        <div
          class="sc-aXZVg sc-gEvEer dktOiQ bktafW"
          data-testid="unit-card"
        >
          <div
            class="sc-aXZVg sc-gEvEer hkJkIR gWvaOf"
          >
            <div
              class="sc-eldPxv sc-ef43f00b-0 fqxCxQ ebOXeQ pa11y-ignore"
            >
              <span
                aria-hidden="true"
              >
                1
              </span>
            </div>
            <span
              class="sc-eqUAAy iuxBUE"
            >
              Something nice
            </span>
            <div
              class="sc-aXZVg ewgfix"
              data-testid="options-tag"
            >
              <span
                class="sc-eqUAAy bxjCXF"
                color="lavender"
              >
                2 unit options
              </span>
            </div>
          </div>
          <div
            class="sc-aXZVg sc-gEvEer gobIoP ioiTMB"
          >
            <div
              class="sc-aXZVg sc-gEvEer hkJkIR fUsBHa"
            >
              <div
                class="sc-aXZVg sc-dAbbOL gObPQU qwGmk"
              >
                Unit info
              </div>
              <span
                class="sc-aXZVg bQyjPj"
              >
                <img
                  alt=""
                  class="sc-iGgWBj lcrpYX"
                  data-nimg="fill"
                  decoding="async"
                  loading="lazy"
                  src="https://next_public_oak_assets_host/NEXT_PUBLIC_OAK_ASSETS_PATH/v1707752509/icons/vk9xxxhnsltsickom6q9.svg"
                  style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
                />
              </span>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</body>
`;
